--- a/icwechat14-06-23-1700.plist
+++ b/icwechat14-06-23-1700.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.iclass.wechat.ningbometro</string>
+				<string>com.iclass.wechat.metroningbo</string>
 				<key>bundle-version</key>
 				<string>5.0</string>
 				<key>kind</key>
